# Huppy

./: CMakeLists.txt  CMakeUserPresets.json  Database.cpp  Huppy.cpp  Huppy.h  Huppy.pro  Huppy.qtvscr  Huppy.sln  Huppy.vcxproj  Huppy.vcxproj.filters  Magic.cpp  Magic.h  Main.cpp  Main.qml  Resources.qrc  Resources_qmlcache.qrc  debug_qmake_qmake_immediate_qmlcache.qrc  pch.h  pch.hpp  pch.hpp.cpp  release_qmake_qmake_immediate_qmlcache.qrc
Client/: ClientSQL.cpp  ClientSQL.h  FileDownloader.cpp  FileDownloader.h
Model/: App.cpp  App.h  Category.cpp  Category.h  IModel.h  Link.cpp  Link.h  Package.cpp  Package.h  Types.h
QML/: AppDelegate.qml  AppView.qml  DelegateApp.qml  DelegateCategory.qml  DelegatePackage.qml  Main.qml  ViewApp.qml  ViewCategory.qml  ViewPackage.qml
Utility/: Database.cpp  Database.h  Magic.h  Obfuscate.cpp
View/: ListViewApp.cpp  ListViewApp.h  ListViewCategory.cpp  ListViewCategory.h  ListViewPackage.cpp  ListViewPackage.h  ManagerView.cpp  ManagerView.h
